# mlops-mlflow

./: .gitignore  Dockerfile.inference  Dockerfile.mlflow  Dockerfile.streamlit  Dockerfile.train  RUNBOOK.md  app.py  features.json  inference_api.py  main.py  makefile  mlflow.db  pyproject.toml  test.ipynb
buildspecs/: buildspec.inference.yml  buildspec.streamlit.yml
src/: data_cleaning.py  data_ingestion.py  feature_scaling.py  freeze_feature_contract.py  train_baseline.py
