[project]
name = "ml-life-cycle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.17",
    "fastapi>=0.127.1",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "s3fs>=0.4.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
